hero :: mobile styled

--- a/src/scss/base/_grid-settings.scss
+++ b/src/scss/base/_grid-settings.scss
@@ -9,4 +9,5 @@ $mobile-down: max-width $screen-xs;
 $tablet-up: min-width $screen-sm;
 $tablet-down: max-width $screen-sm;
 $desktop-up: min-width $screen-md;
+$desktop-down: max-width $screen-md;
 $lg-desktop-up: min-width $screen-lg;
