--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -33,7 +33,7 @@ $base-font-color: $dark-olive;
 $action-color: $olive;
 
 // Border
-$base-border-color: $medium-gray;
+$base-border-color: $olive;
 $base-border: 1px solid $base-border-color;
 
 // Forms
