--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -4,63 +4,172 @@ $ns: '.hero-component';
 
 #{$ns} {
   &__wrapper {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
 
-    #{$ns}__text {
+   @include media($desktop-up) {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    }
+  }
+
+  &__text {
+    z-index: 1;
+    
+    @include media($desktop-down) {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%,-50%);
+    }
+
+    @include media($desktop-up) {
       flex-grow: 1;
       display: flex;
       justify-content: center;
       transform: translateX(30%);
     }
+  }
 
-    #{$ns}__name {
+  &__name {
+    @include media($desktop-up) {
       height: 282px;
       width: 371px;
       position: relative;
+    }
 
-      @include media($lg-desktop-up) {
-        height: 356px;
-        width: 471px;
-      }
+    @include media($lg-desktop-up) {
+      height: 356px;
+      width: 471px;
+    }
 
-      &--text {
+    &--text {
+      font-size: 80px;
+      line-height: 90px;
+      font-family: $playfair;
+      font-weight: bold;
+      text-align: center;
+      color: $white;
+
+      @include media($desktop-up) {
         position: absolute;
         right: 0;
         bottom: 0;
         z-index: 2;
-        font-size: 80px;
-        line-height: 90px;
-        font-family: $playfair;
-        font-weight: bold;
         text-align: right;
         color: $olive;
-
-        @include media($lg-desktop-up) {
-          font-size: 120px;
-          line-height: 130px;
-        }
       }
 
-      &--image {
+      @include media($lg-desktop-up) {
+        font-size: 120px;
+        line-height: 130px;
+      }
+    }
+
+    &--image {
+      display: none;
+
+      @include media($desktop-up) {
+        display: block;
         position: absolute;
         top: 0;
         left: 0;
         z-index: 1;
       }
+    }
 
-      &--button {
-        margin-top: 60px;
-        text-align: center;
+    &--button {
+      margin-top: 60px;
+      text-align: center;
+    }
+  }
+
+  &__image {
+    position: relative;
+
+    img {
+      // height: 100vh;
+      width: 100%;
+      // max-width: auto;
+
+      @include media($desktop-down) {
+        height: 100vh;
+        object-fit: cover;
       }
     }
 
-    #{$ns}__image {
-      img {
-        // height: 100vh;
-        width: 100%;
-        // max-width: auto;
+    &--text {
+      @include media($desktop-up) {
+        position: absolute;
+        right: 60px;
+        top: 60px;
+        bottom: 60px;
+        transform: rotate(180deg);
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        writing-mode: vertical-rl;
+      }
+
+      a {
+        color: $white;
+      }
+    }
+  }
+
+  &__date {
+    color: $white;
+    font-size: 14px;
+
+    @include media($desktop-down) {
+      position: absolute;
+      top: 40px;
+      width: 100%;
+      text-align: center;
+    }
+  }
+
+  &__photo-cred {
+    color: $white;
+    font-size: 14px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    @include media($desktop-down) {
+      position: absolute;
+      bottom: 40px;
+      width: 100%;
+      // left: 50%;
+      // transform: translateX(-50%);
+    }
+
+    &:after {
+      content: '';
+      background-color: $white;
+      height: 1px;
+      width: 100px;
+      margin-left: 22px;
+
+      @include media($desktop-up) {
+        height: 100px;
+        width: 1px;
+        margin-top: 22px;
+        margin-left: 0;
+      }
+    }
+
+    svg {
+      @include media($desktop-down) {
+        margin-right: 7px;
+        width: 27px;
+        
+        g {
+          transform: translate(-6%, 0%) rotate(0deg);
+        }
+      }
+
+      @include media($desktop-up) {
+        margin-bottom: 7px;
       }
     }
   }
