--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -34,4 +34,5 @@
 
 /* Compoents */
 @import "components/hero";
-@import "components/text3up";
+@import "components/text-3up";
+@import "components/image-text";
