--- a/src/scss/components/_image-text.scss
+++ b/src/scss/components/_image-text.scss
@@ -3,10 +3,39 @@
 $ns: '.image-text-component';
 
 #{$ns} {
-  margin: 60px 0;
+  position: relative;
+  margin: 30px 0;
 
   @include media($tablet-up) {
-    margin: 120px 0;
+    margin: 200px 0;
+  }
+
+  &__floating-text {
+    display: none;
+    position: absolute;
+    top: -57%;
+    left: 45%;
+    transform: translate(-50%, 50%);
+    font-size: 120px;
+    letter-spacing: 9.17px;
+    width: 100%;
+    max-width: 1400px;
+    opacity: 0.1;
+    font-family: $playfair;
+    font-weight: bold;
+    color: $olive;
+    z-index: -1;
+
+    @include media($tablet-up) {
+      display: block;
+    }
+    @include media($desktop-up) {
+      font-size: 180px;
+    }
+
+    @media screen and (min-width: 1400px) {
+      font-size: 220px;
+    }
   }
 
   &__wrapper {
@@ -45,7 +74,7 @@ $ns: '.image-text-component';
   }
 
   &__image {
-    margin-bottom: 40px;
+    margin-bottom: 30px;
 
     @include media($tablet-up) {
       margin-bottom: 0;
@@ -70,6 +99,17 @@ $ns: '.image-text-component';
 
     @include media($lg-desktop-up) {
       padding: 100px;
+    }
+  }
+
+  &.us-beach {
+    #{$ns} {
+      &__item--content {
+        font-family: $playfair;
+        font-weight: bold;
+        font-size: 24px;
+        line-height: 40px;
+      }
     }
   }
 }
