--- a/src/scss/modules/_btn.scss
+++ b/src/scss/modules/_btn.scss
@@ -6,6 +6,9 @@
   position: relative;
   z-index: 2;
   transition: all 0.2s ease-in-out;
+  border-width: 2px;
+  border-radius: 25px;
+  overflow: hidden;
 
   &:hover,
   &:focus {
