rsvp component :: dev’n s’more

--- a/src/scss/components/_rsvp.scss
+++ b/src/scss/components/_rsvp.scss
@@ -20,6 +20,10 @@ $ns: '.rsvp-component';
 
   input {
     margin-bottom: 30px;
+
+    // &[type=radio] + label {
+    //   display: inline-block;
+    // }
   }
 
   &--wrapper {
