--- a/src/scss/base/_forms.scss
+++ b/src/scss/base/_forms.scss
@@ -81,3 +81,48 @@ select {
     display: none;
   }
 }
+
+input[type="radio"] {
+  display: none;
+
+  &:checked + label:before {
+    box-shadow: 0 0 0 2px white inset, 1px 1px 0 8px currentcolor inset;
+  }
+
+  + label:before {
+    content: '';
+    display: inline-block;
+    color: #444444;
+    vertical-align: middle;
+    width: 14px;
+    height: 14px;
+    margin: 0 5px 3px 0;
+    border: 1px solid #cccccc;
+    border-radius: 100%;
+  }
+}
+
+.select-wrapper {
+  position: relative;
+  
+  &:after {
+    position: absolute;
+    font-family: FontAwesome;
+    content: '\f107';
+    color: #999999;
+    font-size: 15.4px;
+    top: 10px;
+    right: 10px;
+  }
+
+  select {
+    background-color: #f7f7f7;
+    width: 100%;
+    height: 40px;
+    border: 1px solid #dcdcdc;
+    border-radius: 0;
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+    font-size: 13px;
+    padding: 0 20px 0 10px;
+  }
+}
