--- a/src/scss/components/_rsvp.scss
+++ b/src/scss/components/_rsvp.scss
@@ -18,14 +18,6 @@ $ns: '.rsvp-component';
     margin-bottom: 10px;
   }
 
-  input {
-    margin-bottom: 30px;
-
-    // &[type=radio] + label {
-    //   display: inline-block;
-    // }
-  }
-
   &--wrapper {
     position: relative;
   }
@@ -49,6 +41,12 @@ $ns: '.rsvp-component';
       }
     }
 
+    &-input-wrapper,
+    &-radio-wrapper,
+    &-select-wrapper {
+      margin-bottom: 30px;
+    }
+
     &-title {
       font-family: "Playfair Display", serif;
       font-weight: bold;
@@ -61,6 +59,13 @@ $ns: '.rsvp-component';
       line-height: 24px;
       margin-bottom: 30px;
     }
+
+    &--response {
+      p:first-child {
+        font-size: 24px;
+      }
+    }
+
   }
 
   &__text {
