details page :: initial

--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -4,233 +4,8 @@ $ns: '.hero-component';
 
 #{$ns} {
   &__wrapper {
-    position: relative;
-
-    @include media($desktop-up) {
-      margin-top: 40px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-  }
-
-  &__text {
-    z-index: 1;
-    transition: transform 0.5s ease-in-out, opacity 0.5s ease-in-out;
-    opacity: 0;
-    
-    @include media($desktop-down) {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, 0%);
-    }
-
-    @include media($desktop-up) {
-      // flex-grow: 1;
-      width: 50%;
-      max-width: 700px;
-      display: flex;
-      justify-content: center;
-      transform: translateX(30%);
-      visibility: hidden;
-    }
-
-    &[data-hero-animate="true"] {
-      transform: translate(-50%, -50%);
-      visibility: visible;
-      opacity: 1;
-
-      @include media($desktop-up) {
-        transform: translateX(30%);
-      }
-    }
-  }
-
-  &__name {
-    @include media($desktop-up) {
-      height: 282px;
-      width: 371px;
-      position: relative;
-    }
-
-    @include media($lg-desktop-up) {
-      height: 356px;
-      width: 471px;
-    }
-
-    &--text {
-      font-size: 80px;
-      line-height: 90px;
-      font-family: $playfair;
-      font-weight: bold;
-      text-align: center;
-      color: $white;
-
-      @include media($desktop-up) {
-        position: absolute;
-        right: 0;
-        bottom: 0;
-        z-index: 2;
-        text-align: right;
-        color: $olive;
-      }
-
-      @include media($lg-desktop-up) {
-        font-size: 120px;
-        line-height: 130px;
-      }
-    }
-
-    &--image {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      z-index: -1;
-      transform: translate(-50%,-50%);
-      opacity: 0.3;
-
-      @include media($desktop-up) {
-        top: 0;
-        left: 0;
-        transform: unset;
-        opacity: 1;
-      }
-    }
-
-    &--button {
-      margin-top: 60px;
-      text-align: center;
-    }
-  }
-
-  &__image {
-    position: relative;
-    transition: all 0.5s ease-in-out;
-    opacity: 0;
-    visibility: hidden;
-    transform: translate(50%, 0%);
-    line-height: 0;
-
-    @include media($desktop-up) {
-      max-width: 700px;
-      width: 50%;
-    }
-
-    &:before {
-      content:'';
-      position: absolute;
-      top: 0;
-      left: 0;
-      bottom: 0;
-      right: 0;
-      background-color: rgba(0,0,0,0.2);
-
-      @include media($desktop-up) {
-        display: none;
-      }
-    }
-
-    &[data-hero-animate="true"] {
-      transform: translate(0%, 0%);
-      visibility: visible;
-      opacity: 1;
-    }
-
-    img {
-      width: 100%;
-      box-shadow: 0 25px 60px 0 rgba(0,0,0,0.10);
-      
-      @include media($desktop-up) {
-        border-radius: 10px;
-      }
-
-      @include media($desktop-down) {
-        height: 85vh;
-        object-fit: cover;
-      }
-    }
-
-    &--text {
-      font-size: 14px;
-      line-height: 17px;
-      letter-spacing: 1px;
-      transition: all 0.5s ease-in-out;
-      opacity: 0;
-      visibility: hidden;
-
-      &[data-hero-animate="true"] {
-        visibility: visible;
-        opacity: 1;
-      }
-
-      @include media($desktop-up) {
-        position: absolute;
-        right: 60px;
-        top: 60px;
-        bottom: 60px;
-        transform: rotate(180deg);
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        writing-mode: vertical-rl;
-      }
-
-      a {
-        color: $white;
-      }
-    }
-  }
-
-  &__date {
-    color: $white;
-    font-weight: bold;
-
-    @include media($desktop-down) {
-      position: absolute;
-      top: 40px;
-      width: 100%;
-      text-align: center;
-    }
-  }
-
-  &__photo-cred {
-    color: $white;
-    font-weight: bold;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-    @include media($desktop-down) {
-      position: absolute;
-      bottom: 40px;
-      width: 100%;
-    }
-
-    &:after {
-      @include media($desktop-up) {
-        content: '';
-        height: 100px;
-        width: 1px;
-        margin-top: 22px;
-        margin-left: 0;
-        background-color: $white;
-      }
-    }
-
-    svg {
-      @include media($desktop-down) {
-        margin-right: 7px;
-        width: 27px;
-        
-        g {
-          transform: translate(-6%, 0%) rotate(0deg);
-        }
-      }
-
-      @include media($desktop-up) {
-        margin-bottom: 7px;
-      }
-    }
+    width: 90%;
+    max-width: 1400px;
+    margin: 0 auto;
   }
 }
