--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -30,10 +30,12 @@
 @import "modules/icons";
 
 /* Pages */
+@import "pages/page";
 @import "pages/home";
 
 /* Compoents */
 @import "components/hero";
+@import "components/hero-home";
 @import "components/text-3up";
 @import "components/image-text";
 @import "components/text-block";
