--- a/src/scss/modules/_animations.scss
+++ b/src/scss/modules/_animations.scss
@@ -1,3 +1,14 @@
 /* ==========================================================================
    Animations
    ========================================================================== */
+
+[data-animate] {
+  transition: all 0.5s ease-in-out;
+  opacity: 0;
+  transform: translateY(50px);
+}
+
+[data-animate="true"] {
+  opacity: 1;
+  transform: translateY(0);
+}
