--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -3,14 +3,7 @@
 $ns: '.home-page';
 
 #{$ns} {
-  [data-animate] {
-    transition: all 0.5s ease-in-out;
-    opacity: 0;
-    transform: translateY(50px);
-  }
-
-  [data-animate="true"] {
-    opacity: 1;
-    transform: translateY(0);
+  @include media($desktop-up) {
+    margin-top: 40px;
   }
 }
