--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -36,7 +36,9 @@
 /* Compoents */
 @import "components/hero";
 @import "components/hero-home";
+@import "components/text-2up";
 @import "components/text-3up";
 @import "components/image-text";
+@import "components/image-2up";
 @import "components/text-block";
 @import "components/rsvp";
