updating colors and hero

--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -23,17 +23,17 @@ $white: #fff;
 $dark-gray: #333;
 $medium-gray: #777777;
 $light-gray: #ddd;
-$dark-olive: #1E2219;
-$olive: #5D6750;
-$light-olive: #DEE0DC;
+$burnt-orange: #A94E30;
+$brown: #675B50;
+$cream: #FFE2C4;
 
 // Font Colors
 $base-background-color: $white;
-$base-font-color: $dark-olive;
-$action-color: $olive;
+$base-font-color: $brown;
+$action-color: $burnt-orange;
 
 // Border
-$base-border-color: $olive;
+$base-border-color: $brown;
 $base-border: 1px solid $base-border-color;
 
 // Forms
