--- a/src/scss/components/_image-text.scss
+++ b/src/scss/components/_image-text.scss
@@ -39,7 +39,7 @@ $ns: '.image-text-component';
     opacity: 0.1;
     font-family: $playfair;
     font-weight: bold;
-    color: $olive;
+    color: $burnt-orange;
     z-index: -1;
 
     @include media($tablet-up) {
