--- a/src/scss/components/_text-block.scss
+++ b/src/scss/components/_text-block.scss
@@ -19,7 +19,7 @@ $ns: '.text-block-component';
       content: '';
       height: 4px;
       width: 95px;
-      background-color: $olive;
+      background-color: $burnt-orange;
       display: block;
       margin: 0 auto;
       margin-top: 28px;
