--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -35,7 +35,7 @@
 
 /* Compoents */
 @import "components/hero";
-@import "components/hero-home";
+// @import "components/hero-home";
 @import "components/text-2up";
 @import "components/text-3up";
 @import "components/image-text";
