--- a/src/scss/base/_buttons.scss
+++ b/src/scss/base/_buttons.scss
@@ -7,7 +7,7 @@ button {
   background-color: $action-color;
   border-radius: $base-border-radius;
   border: $base-border;
-  color: #fff;
+  color: $white;
   cursor: pointer;
   display: inline-block;
   font-family: $base-font-family;
@@ -23,7 +23,7 @@ button {
   &:hover,
   &:focus {
     // background-color: darken($action-color, 15%);
-    color: $olive;
+    color: $burnt-orange;
   }
 
   &:disabled {
