--- a/src/scss/components/_image-text.scss
+++ b/src/scss/components/_image-text.scss
@@ -79,6 +79,10 @@ $ns: '.image-text-component';
     &--content {
       line-height: 24px;
     }
+
+    &--button {
+      margin-top: 40px;
+    }
   }
 
   &__image {
