--- a/src/scss/modules/_btn.scss
+++ b/src/scss/modules/_btn.scss
@@ -37,7 +37,7 @@
 }
 
 .btn--primary-white {
-  background-color: transparent;
+  background-color: $burnt-orange;
   border-color: $cream;
   color: $cream;
 
