header dev’d && cleanup

--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -26,6 +26,7 @@ $light-gray: #ddd;
 $burnt-orange: #A94E30;
 $brown: #675B50;
 $cream: #FFE2C4;
+$light-cream: #FFF3E4;
 
 // Font Colors
 $base-background-color: $white;
