--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -34,6 +34,7 @@
 @import "pages/home";
 
 /* Compoents */
+@import "components/header";
 @import "components/hero";
 // @import "components/hero-home";
 @import "components/text-2up";
