remove hover effects for desktop below && add button to text block

--- a/src/scss/base/_buttons.scss
+++ b/src/scss/base/_buttons.scss
@@ -20,10 +20,12 @@ button {
   vertical-align: middle;
   white-space: nowrap;
 
-  &:hover,
-  &:focus {
-    // background-color: darken($action-color, 15%);
-    color: $burnt-orange;
+  @include media($desktop-up) {
+    &:hover,
+    &:focus {
+      // background-color: darken($action-color, 15%);
+      color: $burnt-orange;
+    }
   }
 
   &:disabled {
