--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -105,6 +105,14 @@ $ns: '.header-component';
     transform: translateY(25px);
     transition: opacity 0.5s ease-in-out, transform 1s ease-in-out;
 
+    @include media($desktop-up) {
+      &:hover {
+        &:after {
+          width: 100%;
+        }
+      }
+    }
+
     &:not(:last-child) {
       margin-bottom: 75px;
     }
@@ -118,12 +126,6 @@ $ns: '.header-component';
       background-color: $light-cream;
       height: 8px;
       transition: width 0.5s ease-in-out;
-    }
-
-    &:hover {
-      &:after {
-        width: 100%;
-      }
     }
 
     a {
