--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -73,6 +73,7 @@ $ns: '.header-component';
   }
 
   &__wrapper {
+    position: relative;
     height: 100vh;
     width: 100%;
     background-color: #F0A659;
