--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -19,7 +19,11 @@ $ns: '.header-component';
       }
 
       &__wrapper {
-        transform: translateX(0%);
+        width: 100%;
+      }
+
+      &__background {
+        transform: scale(80);
       }
 
       &__link {
@@ -32,29 +36,32 @@ $ns: '.header-component';
           transition-delay: 0.7s;
         }
       }
+
+      &__floating-image {
+        opacity: 1;
+        transition-delay: 0.75s;
+      }
     }
   }
 
   &__button {
     position: absolute;
-    top: 0;
-    left: 0;
+    top: 1rem;
+    left: 2rem;
     z-index: 10;
-    margin-top: 40px;
-    margin-left: 30px;
     font-family: $playfair;
     font-weight: bold;
     color: $cream;
     font-size: 24px;
-    line-height: 40px;
+    line-height: 90px;
     cursor: pointer;
     display: flex;
     flex-direction: row;
     transition: color 0.5s ease-in-out;
 
     @include media($desktop-up) {
-      margin-left: 40px;
-      margin-top: 60px;
+      top: 2.25rem;
+      left: 2.5rem;
     }
 
     &.light {
@@ -75,10 +82,8 @@ $ns: '.header-component';
   &__wrapper {
     position: relative;
     height: 100vh;
-    width: 100%;
-    background-color: #F0A659;
-    transform: translateX(-100%);
-    transition: transform 0.75s ease-in-out;
+    width: 0;
+    transition: width 0.75s ease-in-out;
     display: flex;
     align-items: center;
     padding-left: 30px;
@@ -90,7 +95,25 @@ $ns: '.header-component';
     }
   }
 
+  &__background {
+    width: 6rem;
+    height: 6rem;
+    position: fixed;
+    border-radius: 50%;
+    top: 1rem;
+    left: 1.25rem;
+    background-color: #F0A659;
+    z-index: 9;
+    transition: transform .8s cubic-bezier(0.86, 0, 0.07, 1);
+
+    @include media($desktop-up) {
+      top: 2.25rem;
+      left: 1.75rem;
+    }
+  }
+
   &__links {
+    z-index: 11;
     @include media($desktop-up) {
       margin-right: 150px;
     }
@@ -140,6 +163,9 @@ $ns: '.header-component';
     right: -100px;
     transform: rotate(180deg);
     max-width: 290px;
+    z-index: 11;
+    opacity: 0;
+    transition: opacity 0.5s ease-in-out;
 
     @include media($tablet-up) {
       right: 25px;
