--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -98,7 +98,7 @@ $ns: '.header-component';
   &__background {
     width: 6rem;
     height: 6rem;
-    position: fixed;
+    position: absolute;
     border-radius: 50%;
     top: 1rem;
     left: 1.25rem;
